--- a/app/scss/rating.scss
+++ b/app/scss/rating.scss
@@ -127,6 +127,18 @@
   }
 }
 
+.rating__nav__tabs__item--1.rating__nav__tabs__item--active {
+  span {
+    background: url("../images/dest/rating/tab__1--hover.svg") no-repeat center;
+  }
+}
+
+.rating__nav__tabs__item--2.rating__nav__tabs__item--active {
+  span {
+    background: url("../images/dest/rating/tab__2--hover.svg") no-repeat center;
+  }
+}
+
 .rating__sort {
   .bonus__sort__wrapper {
     justify-content: flex-start;
@@ -166,6 +178,8 @@
 }
 
 .rating__table {
+  border-bottom: none;
+
   .best__table__head {
     height: 33px;
 
@@ -393,6 +407,344 @@
 }
 // Briks END
 
+// Office
+.office__item {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.office__item__left {
+  position: relative;
+  z-index: 2;
+
+  width: 100%;
+  max-width: 185px;
+
+  padding-top: 22px;
+  padding-bottom: 13px;
+
+  background: linear-gradient(270.43deg, #00a2b5 0%, #8226b7 100%),
+    linear-gradient(270.43deg, #00a2b5 0%, #8226b7 100%), #8226b7;
+  border-radius: 10px;
+  box-sizing: border-box;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    width: 100%;
+    height: 100%;
+
+    content: "";
+
+    background: rgba(36, 44, 79, 0.85);
+    border-radius: 10px;
+    box-sizing: border-box;
+  }
+}
+
+.office__item__logo {
+  display: block;
+
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: fit-content;
+
+  text-decoration: none;
+  text-align: center;
+
+  &:hover {
+    .office__item__logo__img {
+      filter: none;
+    }
+  }
+}
+
+.office__item__logo__img {
+  transition: all 0.2s linear;
+
+  filter: drop-shadow(0px 4px 20px #69a5ff);
+}
+
+.office__item__description__item {
+  font-size: 14px;
+  line-height: 16px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0 15px;
+  height: 35px;
+
+  &--bonus {
+    font-weight: 500;
+
+    letter-spacing: -0.2px;
+    background: rgba($color: #69a5ff, $alpha: 0.1);
+  }
+}
+
+.office__item__description__bonus {
+  font-size: 16px;
+  line-height: 28px;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  text-decoration: none;
+  transition: all 0.2s linear;
+
+  color: #fff;
+
+  img {
+    margin-right: 5px;
+  }
+
+  &:hover {
+    color: #69a5ff;
+  }
+}
+
+.office__item__description__apps {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0 5px;
+}
+
+.office__item__description__app {
+  display: inline-block;
+
+  transition: all 0.2s linear;
+
+  span {
+    display: inline-block;
+
+    width: 20px;
+    height: 20px;
+  }
+
+  &--apple {
+    span {
+      background: url("../images/dest/rating/apple.svg") no-repeat center;
+    }
+  }
+
+  &--play {
+    span {
+      background: url("../images/dest/rating/play.svg") no-repeat center;
+    }
+  }
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.office__item__description__rating {
+  position: relative;
+
+  .best__table__rating__text {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 15px;
+  }
+}
+
+.office__item__reviews {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 10px;
+  padding-top: 13px;
+
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.office__item__reviews__text {
+  font-size: 13px;
+  line-height: 15px;
+
+  display: inline-block;
+
+  margin-right: 10px;
+}
+
+.office__item__reviews__values {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0 5px;
+}
+
+.office__item__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  max-width: 684px;
+  width: 100%;
+}
+
+.office__item__content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  padding: 14px 20px;
+  width: 100%;
+  height: 100%;
+
+  background: #242c4f;
+  border-radius: 10px 10px 0 0;
+}
+
+.office__item__title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 140%;
+
+  margin-bottom: 11px;
+}
+
+.office__item__properties {
+  font-size: 14px;
+  line-height: 140%;
+
+  padding: 6px 15px;
+  margin-bottom: 12px;
+  width: fit-content;
+
+  background: rgba(131, 143, 192, 0.1);
+  border: 1px solid #838fc0;
+  box-sizing: border-box;
+  border-radius: 10px;
+  color: #fff;
+}
+
+.office__item__properties__line {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 5px;
+  width: 100%;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.office__payments__title {
+  font-size: 14px;
+  line-height: 140%;
+
+  margin-bottom: 7px;
+}
+
+.office__payments__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.office__payments__slider {
+  max-width: 295px;
+  width: 100%;
+  margin: 0 5px;
+
+  .glider-track {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.office__payments__item {
+  width: fit-content !important;
+  min-width: fit-content !important;
+}
+
+.office__payments__slider__btn {
+  line-height: 0;
+
+  cursor: pointer;
+
+  background: none;
+  border: none;
+  span {
+    display: inline-block;
+
+    width: 8px;
+    height: 14px;
+    min-width: 8px;
+    min-height: 14px;
+
+    transition: all 0.2s linear;
+
+    background: url("../images/dest/rating/slider__arrow.svg") no-repeat center;
+  }
+
+  &:hover {
+    span {
+      background: url("../images/dest/rating/slider__arrow--hover.svg")
+        no-repeat center;
+    }
+  }
+
+  &--next {
+    transform: rotate(-180deg);
+  }
+}
+
+.office__item__content__right {
+  max-width: 287px;
+  width: 100%;
+
+  .office__item__properties {
+    width: 100%;
+  }
+}
+
+.office__item__btns {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.office__item__btn {
+  width: 100%;
+  max-width: 130px;
+
+  text-align: center;
+}
+
+.office__item__registration {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+
+  width: 100%;
+  height: 45px;
+
+  text-align: center;
+
+  border-radius: 0px 0px 10px 10px;
+}
+// Office END
+
 @media (max-width: $tablet) {
   .pm-14 {
     padding-left: 14px;
@@ -492,6 +844,123 @@
     border: none;
   }
   // Rating END
+
+  // Office
+  .office__item {
+    flex-direction: column;
+    align-items: center;
+
+    background: #242c4f;
+    border-radius: 10px;
+  }
+
+  .office__item__left {
+    max-width: 100%;
+  }
+
+  .office__item__right {
+    max-width: 100%;
+  }
+
+  .office__item__logo {
+    margin-bottom: 22px;
+  }
+
+  .office__item__description {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 16px 0;
+  }
+
+  .office__item__description__item {
+    width: 50%;
+    height: auto;
+
+    &--bonus {
+      order: 3;
+
+      background: none;
+    }
+
+    &--rating {
+      order: 4;
+    }
+  }
+
+  .office__item__reviews {
+    margin-top: 10px;
+    padding-top: 10px;
+
+    .rating__recall__item {
+      padding: 5px 8px;
+
+      border: 1px solid #69a5ff;
+    }
+  }
+
+  .office__item__content {
+    flex-direction: column;
+
+    padding: 11px 13px 17px;
+  }
+
+  .office__item__content__left {
+    width: 100%;
+  }
+
+  .office__item__properties {
+    width: 100%;
+    margin-bottom: 16px;
+  }
+
+  .office__item__content__right {
+    max-width: 100%;
+  }
+
+  .office__item__btns {
+    margin-bottom: 23px;
+  }
+
+  .office__item__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 35px;
+    width: 145px;
+  }
+
+  .office__payments {
+    &.md {
+      display: block;
+    }
+  }
+
+  .office__item__registration {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .office__payments__slider {
+    &::-webkit-scrollbar {
+      width: 0;
+    }
+    .glider-track {
+      gap: 14px;
+    }
+  }
+
+  .office__payments__wrapper {
+    justify-content: center;
+  }
+
+  .office__payments__slider {
+    max-width: 258px;
+  }
+  // Office END
 }
 
 @media (max-width: $mobile) {
@@ -584,4 +1053,10 @@
       gap: 5px;
     }
   }
+
+  // Office
+  .office__item__description__item {
+    padding: 0 5px;
+  }
+  // Office END
 }
