Обновил шрифт у карточек

--- a/app/scss/rating.scss
+++ b/app/scss/rating.scss
@@ -1056,7 +1056,9 @@
 
   // Office
   .office__item__description__item {
-    padding: 0 5px;
+    font-size: 13px;
+
+    padding: 0 7px;
   }
   // Office END
 }
