--- a/app/scss/rating.scss
+++ b/app/scss/rating.scss
@@ -424,6 +424,10 @@
   position: relative;
   z-index: 2;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   width: 100%;
   max-width: 185px;
 
